[package]
name = "dawnslayer"
version = "0.0.1"
authors = ["Daichi Shinozaki <dseg@shield.jp>"]

[dependencies]
arrayvec = "^0.3.23"
coinaddress = "^1.1.3"
easyfibers = "^0.7.0"
either = "^1.1.0"
fixedbitset = "^0.1.7"
itertools = "^0.6.1"
jsonrpc-http-server = "^7.0.1"
nanomsg = "^0.6.2"
num-bigint = "^0.1.40"
protobuf = "^1.4.1"
qrcode = "^0.4.0"
rocksdb = "^0.7.0"
rustc-serialize = "^0.3.24"
rust-crypto = "^0.2.36"
rustfmt = "^0.9.0"
zstd = "^0.4.13"
